# exiftoolgui

./: Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pipeline.yml
src/exiftoolgui/: __init__.py  __main__.py  exiftoolgui.py
tests/: test_exiftoolgui.py
