[build-system]
requires = ["hatchling==1.24.2"]
build-backend = "hatchling.build"

[project]
name = "exiftoolgui"
version = "0.1.3"
authors = [
    { name = "Ciprian Mandache", email = "psyb0t@51k.eu" }, # Role: Orchestrator
    { name = "Claude 3.5 Sonnet" },                         # Role: Developer
]
description = "A GUI application for ExifTool built with Claude 3.5 Sonnet, designed to work on Linux and macOS."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/psyb0t/ezpyai"
Issues = "https://github.com/psyb0t/ezpyai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/exiftoolgui"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.optional-dependencies]
dev = ["pytest"]
